# TickeysRedux

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md  ROADMAP.md  build.rs  changelog.md
Casks/: tickeys-redux.rb
Tickeys.app/Contents/Resources/Base.lproj/: Localizable.strings
Tickeys.app/Contents/Resources/data/: schemes.json
Tickeys.app/Contents/Resources/zh-Hans.lproj/: Localizable.strings
assets/: tickeys_redux.icns
legacy/src/: consts.rs
src/: cocoa_util.rs  core_foundation.rs  core_graphics.rs  event_tap.rs  iokit.rs  main.rs  pref.rs  settings_ui.rs  tickeys.rs
