[package]
name = "tickeys-redux"
version = "1.0.1"
description = "Tickeys Redux — mechanical keyboard sound effects for macOS (arm64 native)"
authors = ["应元东 <ying@yingDev.com>", "Sinclair Liu <@sinclair>"]
edition = "2024"

[dependencies]
libc = "0.2"
objc2 = "0.6.0"
objc2-foundation = { version = "0.3.0", features = ["NSURL"] }
objc2-app-kit = { version = "0.3.0", features = ["NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusBarButton", "NSStatusItem", "NSApplication", "NSButton", "NSView", "NSResponder", "NSWorkspace", "NSAlert"] }
rodio = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.3.0", features = ["json"] }
crossbeam = "0.8"

[lib]
name = "tickeys_lib"
path = "src/tickeys.rs"
